<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.kento.UserInterface.CreateProject">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:hint="@string/projectTitle"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:id="@+id/locationText"
        android:layout_below="@+id/title"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/projectCity"
        android:hint="@string/city"
        android:layout_below="@+id/locationText"
        android:layout_alignLeft="@+id/locationText"
        android:layout_alignStart="@+id/locationText"
        android:layout_alignRight="@+id/title"
        android:layout_alignEnd="@+id/title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/projectCountry"
        android:hint="@string/country"
        android:layout_below="@+id/projectCity"
        android:layout_alignLeft="@+id/projectCity"
        android:layout_alignStart="@+id/projectCity"
        android:layout_alignRight="@+id/projectCity"
        android:layout_alignEnd="@+id/projectCity" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:hint="@string/projectDescription"
        android:height="200dp"
        android:layout_below="@+id/projectCountry"
        android:layout_alignLeft="@+id/projectCountry"
        android:layout_alignStart="@+id/projectCountry"
        android:layout_alignRight="@+id/projectCountry"
        android:layout_alignEnd="@+id/projectCountry" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tools"
        android:hint="@string/projectTools"
        android:height="100dp"
        android:layout_below="@+id/description"
        android:layout_alignLeft="@+id/description"
        android:layout_alignStart="@+id/description"
        android:layout_alignRight="@+id/description"
        android:layout_alignEnd="@+id/description" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/languages"
        android:hint="@string/languages"
        android:height="75dp"
        android:layout_below="@+id/tools"
        android:layout_alignLeft="@+id/tools"
        android:layout_alignStart="@+id/tools"
        android:layout_alignRight="@+id/tools"
        android:layout_alignEnd="@+id/tools" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createProject"
        android:id="@+id/createProject"
        android:layout_below="@+id/languages"
        android:layout_alignLeft="@+id/languages"
        android:layout_alignStart="@+id/languages" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/cancelProject"
        android:layout_below="@+id/languages"
        android:layout_alignRight="@+id/languages"
        android:layout_alignEnd="@+id/languages" />
</RelativeLayout>
</ScrollView>