<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.kento.devbookandroidclient.CreateAccountActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:layout_alignParentTop="true"
        android:hint="@string/userName"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/passwordReq"
        android:layout_alignLeft="@+id/passwordReq"
        android:layout_alignStart="@+id/passwordReq"
        android:layout_alignRight="@+id/userName"
        android:layout_alignEnd="@+id/userName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_below="@+id/confirmPassword"
        android:layout_alignLeft="@+id/confirmPassword"
        android:layout_alignStart="@+id/confirmPassword"
        android:layout_alignRight="@+id/confirmPassword"
        android:layout_alignEnd="@+id/confirmPassword" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bio"
        android:hint="@string/Bio"
        android:inputType="textMultiLine"
        android:height="200dp"
        android:layout_below="@+id/country"
        android:layout_alignLeft="@+id/country"
        android:layout_alignStart="@+id/country"
        android:layout_alignRight="@+id/country"
        android:layout_alignEnd="@+id/country" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:id="@+id/createAccount"
        android:layout_below="@+id/bio"
        android:layout_alignLeft="@+id/bio"
        android:layout_alignStart="@+id/bio" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/cancel"
        android:layout_alignTop="@+id/createAccount"
        android:layout_alignRight="@+id/bio"
        android:layout_alignEnd="@+id/bio" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createuserName"
        android:id="@+id/usernameReq"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignStart="@+id/userName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createpassword"
        android:id="@+id/passwordReq"
        android:layout_below="@+id/userName"
        android:layout_alignLeft="@+id/userName"
        android:layout_alignStart="@+id/userName" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirmPassword"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_alignEnd="@+id/password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/city"
        android:hint="@string/city"
        android:layout_below="@+id/email"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_alignEnd="@+id/email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/country"
        android:hint="@string/country"
        android:layout_below="@+id/city"
        android:layout_alignLeft="@+id/city"
        android:layout_alignStart="@+id/city"
        android:layout_alignRight="@+id/city"
        android:layout_alignEnd="@+id/city" />

</RelativeLayout>
</ScrollView>